Update XServerPixelBuffer to handle errors returned from XGetImage().

XGetImage() may return NULL and XServerPixelBuffer wasn't handling this
case properly.

BUG=649487

Review-Url: https://codereview.webrtc.org/2446733003
Cr-Commit-Position: refs/heads/master@{#14754}